# offlinebooking

./: .gitignore  DYNAMIC_DATA_UPDATE.md  ELECTRON_INTEGRATION_PROGRESS.md  ENVIRONMENT_SETUP.md  GIT_IGNORE_SUMMARY.md  INFINITE_PRINTING_ANALYSIS.md  LICENSE  PRINTING_ENCODING_FIX.md  PRINTING_ISSUE_SUMMARY.md  PRINTING_SETUP.md  PRINTING_SOLUTION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SETUP.md  USER_MANUAL.md  dev-desktop.bat  electron-builder-installer.json  electron-builder-windows.json  index.html  jest.config.js  package-lock.json  package.json  setup-env.js  stop  test-printer-config.js  test-printing.js  test-thermal-printer.js  test_ticket.txt  test_ticket_fixed.txt
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/resources/backend/: EPSON TM-T81  download-anek-font.js  env.example  package-lock.json  test-connected-boxes.js  test-direct-format.js  test-direct-printing.js  test-direct-spooler.js  test-kannada-simple.js  test-kannada-ticket-complete.js  test-pdf-direct-print.js  test-pdf-fixed.js  test-powershell-print.js  test-print-debug.js  test-raw-print.js  test-thermal-printer.js  test_print.txt
frontend/src-tauri/resources/backend/backend/: EPSON TM-T81 ReceiptE4  debug-fonts.js  test-actual-fonts.js  test-box-format.js  test-current-printer.js  test-final-print.js  test-nudi-web-font-fixed.js  test-pdf-print.js  test-pdf-ticket-kannada-anek-local.js  test-pdf-ticket-kannada-anek.js  test-pdf-ticket-kannada-nudi.js  test-width-direct.js  (+4 more)
frontend/src-tauri/src/: main.rs
(+702 files in other folders)
